<resources>
    <string name="app_name">Netflix</string>
    <string name="cobraKai_title">COBRA KAI</string>
    <string name="txtSeason">S1:E1</string>
    <string name="menu_menssage">menu menssage</string>
    <string name="menu_volume">menu volume</string>
    <string name="menu_star">menu avaliações</string>
    <string name="menu_content">menu episódios</string>
    <string name="tempoAssistido">01:00</string>
    <string name="tempoTotal">42:30</string>

</resources>